# Epherome

./: .eslintignore  .eslintrc  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .prettierrc  .prettierrc.cjs  .prettierrc.js  Cargo.toml  README.md  README_zh_cn.md  babel.config.js  crowdin.yml  electron-builder.yml  gulpfile.js  index.html  package-lock.json  package.json  postcss.config.js  product.json  stylelint.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vue.config.js  webpack.config.ts
.github/workflows/: aur.yml  build.yml  main.yml  release.yml
assets/: template.html  template.txt
assets/lang/: en-us.json5  zh-cn.json5
docs/: CHANGELOG.md  README_zh_cn.md  RELEASE_NOTE.md
gulp/: dev.js  prod.js  toolkit.js
native/: Cargo.toml  README.md
native/src/: compress.rs  lib.rs  tool.rs  unzip.rs
native/src/data/: news.rs
native/src/java/: checker.rs  finder.rs  reg_finder.rs
public/: index.html
scripts/: build.js  dev.js  post-release.js  post-release.ts  set-version.js  webpack.base.js  webpack.base.ts  webpack.main.js  webpack.main.ts  webpack.renderer.js  webpack.renderer.ts
src/: App.tsx  App.vue  auth.js  background.js  core.js  epherome.js  loader.ts  main.js  main.ts  main.tsx  ms-auth.js  ms-auth.ts  native.d.ts  property.js  route.js  styles.css  system.js  system.ts  touchbar.js  touchbar.ts  utils.js  window.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  utils.rs
src/assets/: language.json
src/common/: bridge.ts  extension.ts  loggers.ts
src/components/: Accounts.vue  Alert.tsx  App.tsx  AppBar.tsx  BottomSheet.tsx  Button.tsx  Card.tsx  Center.tsx  Checkbox.tsx  Container.tsx  Dialog.tsx  DialogWrapper.tsx  Dialogs.tsx  GlobalOverlay.tsx  Grid.tsx  Home.vue  Icon.tsx  IconButton.tsx  Image.tsx  Info.tsx  Input.tsx  LaunchProgress.tsx  (+33 more)
test/: arrays.test.ts  core.spec.ts  index.spec.ts  strings.test.ts  tools.spec.ts
webpack/: base.ts  dev-main.js  dev-main.ts  dev-renderer.js  dev-renderer.ts  prod.js  prod.ts
(+370 files in other folders)
