[package]
name = "epherome"
version = "0.0.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
path = "src/native/lib.rs"
crate-type = ["cdylib"]

[dependencies]
which = "4.2.2"
once_cell = "1.8.0"
regex = "1.5.4"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
