[package]
name = "epherome"
version = "0.0.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
which = "4.2.2"
once_cell = "1.8.0"
regex = "1.5.4"
zip = "0.5.13"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
scraper = "0.12.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.9.0"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "channel-api"]
