[package]
name = "epherome"
version = "0.0.0"
license = "GPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
which = "4.2.2"
once_cell = "1.8.0"
regex = "1.5.5"
zip = "0.5.13"
reqwest = { version = "0.11.4", features = ["json", "stream"] }
scraper = "0.12.0"
tokio = { version = "1.12.0", features = ["rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.9.0"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "channel-api"]
