[package]
name = "epherome"
version = "0.0.0"
license = "GPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
which = "4.2.5"
once_cell = "1.13.0"
regex = "1.6.0"
zip = "0.6.2"
reqwest = { version = "0.11.11", features = ["json", "stream"] }
scraper = "0.13.0"
tokio = { version = "1.19.2", features = ["rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-latest", "task-api", "promise-api"]
